@@ -63,6 +63,7 @@ var localized_strings,
 			options_group_events: "Show events on group overview",
 			options_greenlight_banner: "Replace Steam Greenlight banner",
 			options_hideactivelistings: "Hide all active listings on Market homepage by default",
+			options_autocheckssa: "Automatically check \"Steam Subscriber Agreement\" checkboxes upon Market listings",
 			options_hidespamcomments: "Hide spam comments from Workshop & profiles",
 			options_spamcommentregex: "Regular Expression string:",
 			options_customizespamcommentregex: "(Customize)",
